# MAGI

./: CMakeLists.txt  package.xml
msg/: Data.msg  SPIInstance.msg  UARTInstance.msg
scripts/: AIactor.py  AudioAnalyze.py  Controller.py  SPIsrv.py  Saver.py  SoundA.py  SoundManager.py  UARTRCsrv.py  UARTsrv.py  constant.py  mtools.py  rules.md
srv/: SPICrt.srv  SPIdrqst.srv  SendData.srv  UARTCrt.srv  UARTList.srv  UARTUnreg.srv  URCTRD.srv
